objects/UniqueMail__c.object
<CustomObject>
    <fields>
        <fullName>AutobahnNotSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autobahn配信停止</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignNameMemo__c</fullName>
        <label>キャンペーン名（ロングテキスト）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>キャンペーン名</label>
        <picklist>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMInhibitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM禁止</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomainReport__c</fullName>
        <formula>HYPERLINK(&quot;/00O10000002pxXP?pv0=&quot; &amp;  Domain__c , &quot;ドメインが一致するアドレス一覧&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>レポート</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>Formula: Company domain from email | Question | Customer Community | Salesforce.com
https://success.salesforce.com/questionDetail?qId=a1X30000000JF94EAG</description>
        <formula>SUBSTITUTE(Email__c, LEFT(Email__c, FIND(&quot;@&quot;, Email__c)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>メールアドレスの@以降をドメインとして表示します</inlineHelpText>
        <label>ドメイン</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>メールアドレス</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MailTransmissionCheck__c</fullName>
        <formula>IF(NonEmail__c =  Email__c, &quot;不達&quot;, &quot;送信可能&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メール送信チェック</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAudit__c</fullName>
        <label>氏名（受講者）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameExamResult__c</fullName>
        <label>氏名（試験結果）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameLead__c</fullName>
        <label>氏名（リード）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameOpp__c</fullName>
        <label>氏名（商談）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameVoucher__c</fullName>
        <label>氏名（バウチャー）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>氏名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsLetterReceipt__c</fullName>
        <label>ニュースレター受取</label>
        <picklist>
            <picklistValues>
                <fullName>要</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不要</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NonEmail__c</fullName>
        <label>不達電子メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NotSend__c</fullName>
        <formula>IMAGE(IF(OR( AutobahnNotSend__c ,  DMInhibitation__c ,  TransmissionHalt__c ,  Transferring__c ), &quot;/img/samples/light_red.gif&quot;, &quot;/img/samples/light_green.gif&quot;), &quot;Traffic&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>配信停止、Autobahn配信停止、DM禁止、退職済・転属先不明のいずれかにチェックがある場合に赤となります。</inlineHelpText>
        <label>配信停止</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>退職済・転属先不明</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransmissionHalt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>配信停止</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WishAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>会計・財務関連サービスの案内を希望</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WishExam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>試験・研修の案内を希望</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WishSeminarEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>セミナー・イベントの案内を希望</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WishWEBContents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WEBコンテンツの案内を希望</label>
        <type>Checkbox</type>
    </fields>
    <label>ユニークメールアドレス</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CampaignName__c</columns>
        <columns>DMInhibitation__c</columns>
        <columns>Transferring__c</columns>
        <columns>TransmissionHalt__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>ユニークメールアドレス名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>